# Synapse2FabricAccelerator

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
config/: settings.example.yaml
docs/: SYNAPSE_ACCESS_REQUEST.md  architecture.md
docs/screenshots/: README.md
instructions/: 00-project-overview.md  01-agent-architecture.md  02-discovery-agent.md  03-inventory-agent.md  04-assessment-agent.md  05-migration-agent.md  06-reporting-agent.md  07-dashboard-agent.md  08-optimization-agent.md  09-cli-and-execution.md  10-development-kickoff.md
powerbi/: PowerBI_Model_Guide.md  SynapseMigration.pbip
powerbi/SynapseMigration.Report/: .platform  definition.pbir  report.json
powerbi/SynapseMigration.SemanticModel/: .platform
src/: README.md  __init__.py  cli.py
src/agents/: README.md  __init__.py  assessment_agent.py  base_agent.py  dashboard_agent.py  discovery_agent.py  inventory_agent.py  migration_agent.py  optimization_agent.py  reporting_agent.py
src/exporters/: __init__.py  csv_writer.py  excel_writer.py  json_writer.py  markdown_writer.py  powerbi_pbip.py
src/models/: __init__.py  assessment.py  enums.py  inventory.py
src/services/: __init__.py  auth.py  azure_clients.py  synapse_rest.py
src/templates/: __init__.py  dashboard_template.py
src/utils/: __init__.py  config.py  logging_config.py  retry.py  scoring.py
src/webapp/: __init__.py  __main__.py  app.py  auth.py  jobs.py
tests/: conftest.py  test_agents.py  test_exporters.py  test_utils.py  test_webapp.py
(+17 files in other folders)
