[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-fabric-accelerator"
version = "0.1.0"
description = "Enterprise accelerator to audit Azure Synapse Analytics and prepare migration to Microsoft Fabric."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Synapse Fabric Accelerator Team" }]
keywords = ["azure", "synapse", "fabric", "migration", "assessment", "audit"]

dependencies = [
    "azure-identity>=1.16",
    "azure-mgmt-resource>=23.0",
    "azure-mgmt-synapse>=2.0",
    "azure-mgmt-subscription>=3.1",
    "azure-mgmt-resourcegraph>=8.0",
    "azure-core>=1.30",
    "requests>=2.31",
    "tenacity>=8.2",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "flask>=3.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "six>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]

[project.scripts]
synapse-fabric = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
